--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3309,7 +3309,7 @@ input, select, textarea {
 		@media screen and (max-width: 980px) {
 
 			.wrapper {
-				padding: 4em 3em 2em 3em ;
+				padding: 4em 3em 4em 3em ;
 			}
 
 		}
@@ -3317,7 +3317,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			.wrapper {
-				padding: 3em 2em 1em 2em ;
+				padding: 3em 2em 3em 2em ;
 			}
 
 		}
@@ -3588,7 +3588,15 @@ input, select, textarea {
 		position: relative;
 		text-align: center;
 	}
-
+		#banner .inner {
+			display: flex;
+			flex-flow: column;
+			align-items: center;
+		}
+		#banner .inner> img{
+			width: 4em;
+			margin-bottom: 3rem;
+		}
 		#banner h2 {
 			-moz-transform: scale(1);
 			-webkit-transform: scale(1);
@@ -3604,6 +3612,7 @@ input, select, textarea {
 			padding: 0.35em 1em;
 			position: relative;
 			z-index: 1;
+			margin-bottom: 3rem;
 		}
 
 			#banner h2:before, #banner h2:after {
